--- a/.gitattributes
+++ b/.gitattributes
@@ -61,3 +61,8 @@
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
+
+* linguist-vendored
+*app*.js linguist-vendored=false
+*controllers*.js linguist-vendored=false
+*.cs linguist-vendored=false
